fix(style): fix borders and overflows

--- a/components/common/ProductCard/style.module.scss
+++ b/components/common/ProductCard/style.module.scss
@@ -3,6 +3,7 @@
   flex-grow:1;
   overflow-x: auto;
   overflow-y: hidden;
+  direction: ltr;
 
   scrollbar-width: none;
   -ms-overflow-style: none;
